# battery-symbols

./: .gitignore  .pre-commit-config.yaml  README.md  create_font.py  generate_battery_icons.py  normalize_battery_icons.py  pyproject.toml
src/battery_symbols/: config.py  create.py  export.py  generate.py  models.py  normalize.py
